[package]
name = "voice-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31.0", features = ["default", "persistence"] }
egui_plot = "0.31.0"
egui_extras = { version = "0.31.0", features = ["default", "image"] }
cpal = "0.15.3"
ort = "2.0.0-rc.9"
ndarray = "0.16.1"
lazy_static = "1.5.0"
serde = "1.0.217"
serde_json = "1.0.138"

[dev-dependencies]
approx = "0.5.1"
